<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MyApps</string>


    <string name="simple_form_send">Send</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="title_empty" translatable="false"></string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="title_activity_choose_group">Choose exhibition</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">My applications</string>
    <string name="title_activity_org_add">Сatalog</string>
    <string name="title_activity_qrscan">QR code scan</string>

    <string name="error_field_is_required">Field %s is required</string>
    <string name="error_cant_open_activity">Error, can`t open activity %s</string>
    <string name="error_cant_load_org">Error occurred when try to load %s</string>

    <string name="title_activity_about_org" translatable="false">AboutOrgActivity</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="title_activity_ticket" translatable="false">TicketActivity</string>



    <string name="title_plan_image">Plan</string>

    <string name="hello_blank_fragment" translatable="false">Plan</string>
    <string name="title_activity_simple_form" translatable="false">Form</string>

    <string name="ticket_load_text">Press Load to get ticket</string>
    <string name="ticket_load_button">Get</string>


    <string name="title_choose_city">Choose city</string>

    <string name="text_how_to_add_app">Click the picture and add to My applications</string>
    <string name="text_press_catalog">Click CATALOG to see full list of applications</string>

    <string name="caption_contact_stand">Stand</string>
    <string name="caption_contact_category">Category</string>
    <string name="caption_contact_email">Emain</string>
    <string name="caption_contact_phone">Phone</string>
    <string name="caption_contact_site">Site</string>
    <string name="caption_contact_vk">VK</string>
    <string name="caption_contact_fb">FB</string>
    <string name="caption_contact_inst">Instagram</string>


    <string name="settings_button_add">Catalog</string>
    <string name="settings_add_text_inputcode">Input code</string>
    <string name="settings_add_group_not_found">Code not found</string>
    <string name="settings_add_or">or</string>
    <string name="settings_add_scan_qr">Scan QR code</string>
    <string name="settings_add_choose">Choose from list</string>

    <string name="member_list_all">&lt;All&gt;</string>
    <string name="setting_group_delete">Settings will be deleted</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>


    <string name="settings_button_switch">Choose</string>
    <string name="settings_button_settings">Settings</string>

    <string name="settings_switch_visitor">Visitor</string>
    <string name="settings_switch_presenter">Presenter</string>

    <string name="settings_button_preload">Load</string>
    <string name="settings_button_remove">Remove group</string>
    <string name="settings_button_clean">Clean</string>

    <string name="message_form_sent">Form sent successfully</string>
    <string name="message_org_preload_complete">Images load complete</string>
    <string name="message_org_cache_clean_complete">Cache clean complete</string>
    <string name="caption_preload_image">You can load images for offline work</string>

    <string name="message_data_is_loading">Loading…</string>
    <string name="message_group_deleting">Deleting…</string>


</resources>
